# watermarking_performance

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  Readme.md  color_to_gray.cpp  eblind_dlc.cpp  eblind_dlc_dctdniz_robust.cpp
src/: CMakeLists.txt  Detector.cpp  Detector.h  VideoFrame.cpp  VideoFrame.h  WatermarkReference.cpp  WatermarkReference.h
tests/: CMakeLists.txt  Detector.cpp  Performance.cpp  Utils.h  VideoFrame.cpp  WatermarkReference.cpp
